Update for compatibility with json ModelSEED

--- a/iPythonNotebooks/From_functional_roles_to_gap-filling.ipynb
+++ b/iPythonNotebooks/From_functional_roles_to_gap-filling.ipynb
@@ -64,12 +64,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 3590 unique roles in this genome\n"
+      "There are 3588 unique roles in this genome\n"
      ]
     }
    ],
    "source": [
-    "assigned_functions = PyFBA.parse.read_assigned_functions(\"ungapfilled_model/citrobacter.assigned_functions\")\n",
+    "assigned_functions = PyFBA.parse.read_assigned_functions(\"Citrobacter/ungapfilled_model/citrobacter.assigned_functions\")\n",
     "roles = set([i[0] for i in [list(j) for j in assigned_functions.values()]])\n",
     "print(\"There are {} unique roles in this genome\".format(len(roles)))"
    ]
@@ -90,7 +90,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 1446 unique reactions associated with this genome\n"
+      "There are 1461 unique reactions associated with this genome\n"
      ]
     }
    ],
@@ -217,7 +217,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial run has a biomass flux value of -6.315151758129552e-13 --> Growth: False\n"
+      "Initial run has a biomass flux value of -7.369001073591906e-13 --> Growth: False\n"
      ]
     }
    ],
@@ -282,7 +282,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The biomass reaction has a flux of 0.0 --> Growth: False\n"
+      "The biomass reaction has a flux of -6.253293047527453e-13 --> Growth: False\n"
      ]
     }
    ],
@@ -329,7 +329,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The biomass reaction has a flux of 6.857877457080481e-12 --> Growth: False\n"
+      "The biomass reaction has a flux of 3.209615516232569e-14 --> Growth: False\n"
      ]
     }
    ],
@@ -372,7 +372,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The biomass reaction has a flux of -9.25738431877028e-15 --> Growth: False\n"
+      "The biomass reaction has a flux of 0.0 --> Growth: False\n"
      ]
     }
    ],
@@ -416,7 +416,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The biomass reaction has a flux of 2.731624048646644e-13 --> Growth: False\n"
+      "The biomass reaction has a flux of 1.8515478209998176e-12 --> Growth: False\n"
      ]
     }
    ],
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -461,7 +461,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The biomass reaction has a flux of 0.0 --> Growth: False\n"
+      "The biomass reaction has a flux of 1000.0000000000007 --> Growth: True\n"
      ]
     }
    ],
@@ -478,12 +478,12 @@
     "## Trimming the model\n",
     "Now that the model has been shown to grow on ArgonneLB media after several gap-fill iterations, we should trim down the reactions to only the required reactions necessary to observe growth.\n",
     "\n",
-    "This process may take a while (hours), depending on the number of reactions added."
+    "This process may take a while depending on the number of reactions added."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -492,19 +492,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Testing reactions from orphans"
-     ]
-    },
-    {
-     "ename": "Exception",
-     "evalue": "'base' union 'optional' reactions does not generate growth. We can not bisect the set\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-8ff786488617>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m     new_essential = PyFBA.gapfill.minimize_additional_reactions(ori, new, compounds,\n\u001b[1;32m     19\u001b[0m                                                                 \u001b[0mreactions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmedia\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m                                                                 biomass_equation)\n\u001b[0m\u001b[1;32m     21\u001b[0m     \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstderr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Saved {} reactions from {}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;31m# Record the method used to determine\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.6/site-packages/PyFBA/gapfill/reaction_minimization.py\u001b[0m in \u001b[0;36mminimize_additional_reactions\u001b[0;34m(base_reactions, optional_reactions, compounds, reactions, media, biomass_eqn, verbose)\u001b[0m\n\u001b[1;32m    149\u001b[0m                                               biomass_eqn)\n\u001b[1;32m    150\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mgrowth\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 151\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"'base' union 'optional' reactions does not generate growth. We can not bisect the set\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    152\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    153\u001b[0m     \u001b[0;31m# first, lets see if we can limit the reactions based on compounds present and still get growth\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mException\u001b[0m: 'base' union 'optional' reactions does not generate growth. We can not bisect the set\n"
+      "Testing reactions from orphansAt the beginning the base list has 2292  and the optional list has 7450 reactions\n"
      ]
     }
    ],
