--- a/iPythonNotebooks/Gap-fill_a_model.ipynb
+++ b/iPythonNotebooks/Gap-fill_a_model.ipynb
@@ -12,8 +12,6 @@
     "\n",
     "In this notebook, we will present the steps to generate a genome-scale metabolic model from *RAST* annotations, gap-fill the model on rich LB type media, and save the model to hard disk.\n",
     "\n",
-    "*There is currently a known bug that prevents gap-filling using the JSON ModelSEED parser, for this reason the TSV parser is recommended and provided as the default.\n",
-    "\n",
     "---\n",
     "The required files and information for this notebook:\n",
     "* List of functional roles from *RAST* (normally labeled 'assigned_functions' from the **Genome Directory** download).\n",
@@ -21,7 +19,11 @@
     "* Organism ID\n",
     "* Media file\n",
     "* Close genomes functional roles file\n",
-    "* Directory on hard disk to store model"
+    "* Directory on hard disk to store model\n",
+    "---\n",
+    "If an assigned_functions file is unavailable from RAST, a .gff or .gff3 file can be converted into one using the extract_functions.py script in PyFBA/example_code/ with the following syntax.\n",
+    "\n",
+    "`python3 extract_functions.py -i Your/File.gff3 -o Your/Output.assigned_functions`"
    ]
   },
   {
@@ -49,10 +51,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_functions_file = \"ungapfilled_model/citrobacter.assigned_functions\"\n",
-    "close_genomes_functions_file = \"ungapfilled_model/closest.genomes.roles\"\n",
-    "org_name = \"Citrobacter sedlakii\"\n",
-    "org_id = \"Citrobacter sedlakii\""
+    "model_functions_file = \"Citrobacter/ungapfilled_model/citrobacter.assigned_functions\"\n",
+    "close_genomes_functions_file = \"Citrobacter/ungapfilled_model/closest.genomes.roles\"\n",
+    "org_name = \"Citrobacter_sedlakii\"\n",
+    "org_id = \"Citrobacter_sedlakii\""
    ]
   },
   {
@@ -196,7 +198,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -221,17 +225,29 @@
       "Finding compound-probability reactions\n",
       "Found 3255 reactions\n",
       "New total: 5535 reactions\n",
-      "Finding orphan-compound reactions\n",
-      "Found 3339 reactions\n",
-      "New total: 8874 reactions\n",
-      "Unable to gap-fill model\n"
+      "Gap-fill was successful, now trimming model\n",
+      "Removed 2947 reactions based on flux value\n",
+      "Trimming probable group of reactions\n",
+      "At the beginning the base list has 1834  and the optional list has 1497 reactions\n",
+      "Trimming ec group of reactions\n",
+      "The set of 'base' reactions results in growth so we don't need to bisect the optional set\n",
+      "Trimming subsystems group of reactions\n",
+      "The set of 'base' reactions results in growth so we don't need to bisect the optional set\n",
+      "Trimming close genomes group of reactions\n",
+      "At the beginning the base list has 1592  and the optional list has 132 reactions\n",
+      "Trimming essential group of reactions\n",
+      "At the beginning the base list has 1586  and the optional list has 5 reactions\n",
+      "Trimming media group of reactions\n",
+      "At the beginning the base list has 1526  and the optional list has 49 reactions\n",
+      "Trimming complete.\n",
+      "Total gap-filled reactions: 10\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model was unable to gap-fill!\n"
+      "The biomass reaction has a flux of 358.248919636977\n"
      ]
     }
    ],
@@ -254,7 +270,24 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1) rxn02928: (1) NAD[c] + (1) tetrahydrodipicolinate[c] <=> (1) NADH[c] + (1) H+[c] + (1) Dihydrodipicolinate[c]\n",
+      "(2) rxn05310: (1) Niacin[e] <=> (1) Niacin[c]\n",
+      "(3) rxn02285: (1) NADP[c] + (1) UDP-MurNAc[c] <=> (1) NADPH[c] + (1) H+[c] + (1) UDP-N-acetylglucosamine enolpyruvate[c]\n",
+      "(4) rxn01644: (1) Pyruvate[c] + (1) L-Aspartate4-semialdehyde[c] <=> (2) H2O[c] + (1) H+[c] + (1) Dihydrodipicolinate[c]\n",
+      "(5) rxn03164: (1) ATP[c] + (1) Ala-Ala[c] + (1) UDP-N-acetylmuramoyl-L-alanyl-D-gamma-glutamyl-meso-2-6-diaminopimelate[c] <=> (1) ADP[c] + (1) Phosphate[c] + (1) H+[c] + (1) UDP-N-acetylmuramoyl-L-alanyl-D-glutamyl-6-carboxy-L-lysyl-D-alanyl- D-alanine[c]\n",
+      "(6) rxn05166: (1) H2O[c] + (1) ATP[c] + (1) Co2+[e] <=> (1) ADP[c] + (1) Phosphate[c] + (1) H+[c] + (1) Co2+[c]\n",
+      "(7) rxn10571: (1) H2O[c] + (1) ATP[c] + (1) Mg[e] <=> (1) ADP[c] + (1) Phosphate[c] + (1) H+[c] + (1) Mg[c]\n",
+      "(8) rxn05224: (1) Riboflavin[e] <=> (1) Riboflavin[c]\n",
+      "(9) rxn01513: (1) ATP[c] + (1) H+[c] + (1) dTMP[c] <=> (1) ADP[c] + (1) dTDP[c]\n",
+      "(10) rxn00851: (1) ATP[c] + (2) D-Alanine[c] <=> (1) ADP[c] + (1) Phosphate[c] + (1) H+[c] + (1) Ala-Ala[c]\n"
+     ]
+    }
+   ],
    "source": [
     "for n, rid in enumerate(model.gf_reactions, start=1):\n",
     "    print(\"({}) {}: {}\".format(n, rid, model.reactions[rid].equation))"
@@ -274,7 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_directory = \"save_citrobacter_sedlakii\"\n",
+    "model_directory = \"saved_models\"\n",
     "PyFBA.model.save_model(model, model_directory)"
    ]
   },
@@ -296,12 +329,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Citrobacter sedlakii.compounds: 35315B\n",
-      "Citrobacter sedlakii.gfmedia: 0B\n",
-      "Citrobacter sedlakii.gfreactions: 0B\n",
-      "Citrobacter sedlakii.info: 114B\n",
-      "Citrobacter sedlakii.reactions: 13662B\n",
-      "Citrobacter sedlakii.roles: 70247B\n"
+      "Citrobacter_sedlakii.compounds: 35343B\n",
+      "Citrobacter_sedlakii.gfmedia: 14B\n",
+      "Citrobacter_sedlakii.gfreactions: 90B\n",
+      "Citrobacter_sedlakii.info: 114B\n",
+      "Citrobacter_sedlakii.reactions: 13752B\n",
+      "Citrobacter_sedlakii.roles: 70980B\n"
      ]
     }
    ],
@@ -310,6 +343,13 @@
     "    fp = os.path.join(model_directory, f)\n",
     "    print(f, \": \", os.path.getsize(fp), \"B\", sep=\"\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
