--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,76 @@
 
 
+VERSION 2.0
+
+
+This version marks the complete functional restoration of PyFBA
+following the restructuring of the
+ModelSEED Biochemistry database. The new default parser uses json files,
+which should allow it to
+maintain function through future changes in the database.
+
+Repaired and confirmed function of Jupyter Notebooks and scripts in PyFBA/example_code/
+
+All notebooks and example_code scripts are functional with both the json
+and tsv parsers
+
+Updated the tests in PyFBA/tests to be compatible and successful with the new parser.
+
+All tests will now pass successfully if your installation is working
+correctly.
+
+When testing the tsv parser use tsv_tests, as the default json parser
+has slightly different outputs.
+
+Expanded upon the information and features present in the Jupyter Notebooks.
+
+*Added Reaction_fluxes_and_Compound_usage.ipynb
+
+*Added the Citrobacter/ directory with sample files to the
+iPythonNotebooks folder.
+
+*Added the ability to search an SBML for a metabolite using the Find a
+Metabolite notebook.
+
+*Added information to aid in the generation of models from functional
+role data.
+
+
+
+VERSION 1.3
+
+
+Updated parse/model_seed.py to work with reformatted ModelSEED database.
+
+This restores base functionality, but also breaks compatibility with
+many of the accessory and testing scripts. These will be the focus of
+update 2.0 to be released early 2020.
+
+Updated parse/SBML.py to include different biomass equation identifiers.
+
+Some SBML files from external sources used different identifiers for the
+biomass equation.
+
+Added function to obtain InChI keys for compounds in your sbml.
+
+-   example_code/extract_inchi.py
+
+Added function to convert .gff output from rast into assigned_functions.
+
+-   example_code/extract_functions.py
+
+Added/updated example code compatible with the new database and python3.
+
+-   example_code/run_fba_sbml3.py
+-   example_code/sbml_to_fba.py
+
+Updated iPython notebook From_functional_roles_to_gap-filling.ipynb.
+
+Includes updated information on obtaining assigned_functions and
+extract_functions.py
+
+
+
 VERSION 1.2
 
 
