--- a/iPythonNotebooks/Gap-fill_a_model.ipynb
+++ b/iPythonNotebooks/Gap-fill_a_model.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Gap-fill a model in PyFBA\n",
     "\n",
@@ -22,17 +19,17 @@
     "* Organism ID\n",
     "* Media file\n",
     "* Close genomes functional roles file\n",
-    "* Directory on hard disk to store model"
+    "* Directory on hard disk to store model\n",
+    "---\n",
+    "If an assigned_functions file is unavailable from RAST, a .gff or .gff3 file can be converted into one using the extract_functions.py script in PyFBA/example_code/ with the following syntax.\n",
+    "\n",
+    "`python3 extract_functions.py -i Your/File.gff3 -o Your/Output.assigned_functions`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
@@ -42,10 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Generate model\n",
     "The first step shows how to build the model from *RAST* functional roles."
@@ -54,27 +48,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "model_functions_file = \"data/citrobacter.assigned_functions\"\n",
-    "close_genomes_functions_file = \"data/close_genomes_functions\"\n",
-    "org_name = \"Citrobacter sedlakii\"\n",
-    "org_id = \"Citrobacter sedlakii\""
+    "model_functions_file = \"Citrobacter/ungapfilled_model/citrobacter.assigned_functions\"\n",
+    "close_genomes_functions_file = \"Citrobacter/ungapfilled_model/closest.genomes.roles\"\n",
+    "org_name = \"Citrobacter_sedlakii\"\n",
+    "org_id = \"Citrobacter_sedlakii\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model = PyFBA.model.roles_to_model(model_functions_file, org_id, org_name)"
@@ -82,10 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "The model has been generated and is now ready to use for flux-balance analysis simulations. Running flux-balance analysis will show the model does not contain all required metabolism to grow in the LB media.\n",
     "\n",
@@ -95,9 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -182,11 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -222,55 +199,55 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Current model contains 1445 reactions\n",
+      "Current model contains 1518 reactions\n",
       "Finding media import reactions\n",
       "Found 139 reactions\n",
-      "New total: 1584 reactions\n",
+      "New total: 1657 reactions\n",
       "Finding essential reactions\n",
       "Found 109 reactions\n",
-      "New total: 1630 reactions\n",
+      "New total: 1702 reactions\n",
       "Finding close organism reactions\n",
-      "Found 1875 reactions\n",
-      "New total: 2047 reactions\n",
+      "Found 1799 reactions\n",
+      "New total: 2045 reactions\n",
       "Finding subsystem reactions\n",
-      "Found 237 reactions\n",
-      "New total: 2284 reactions\n",
+      "Found 235 reactions\n",
+      "New total: 2280 reactions\n",
       "Finding EC reactions\n",
       "Found 0 reactions\n",
-      "New total: 2284 reactions\n",
+      "New total: 2280 reactions\n",
       "Finding compound-probability reactions\n",
-      "Found 2686 reactions\n",
-      "New total: 4970 reactions\n",
+      "Found 3255 reactions\n",
+      "New total: 5535 reactions\n",
       "Gap-fill was successful, now trimming model\n",
-      "Removed 2654 reactions based on flux value\n",
+      "Removed 2947 reactions based on flux value\n",
       "Trimming probable group of reactions\n",
-      "At the beginning the base list has 1817  and the optional list has 1273 reactions\n",
+      "At the beginning the base list has 1834  and the optional list has 1497 reactions\n",
       "Trimming ec group of reactions\n",
       "The set of 'base' reactions results in growth so we don't need to bisect the optional set\n",
       "Trimming subsystems group of reactions\n",
       "The set of 'base' reactions results in growth so we don't need to bisect the optional set\n",
       "Trimming close genomes group of reactions\n",
-      "At the beginning the base list has 1520  and the optional list has 165 reactions\n",
+      "At the beginning the base list has 1592  and the optional list has 132 reactions\n",
       "Trimming essential group of reactions\n",
-      "At the beginning the base list has 1514  and the optional list has 6 reactions\n",
+      "At the beginning the base list has 1586  and the optional list has 5 reactions\n",
       "Trimming media group of reactions\n",
-      "At the beginning the base list has 1451  and the optional list has 54 reactions\n",
+      "At the beginning the base list has 1526  and the optional list has 49 reactions\n",
       "Trimming complete.\n",
-      "Total gap-filled reactions: 8\n"
+      "Total gap-filled reactions: 10\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The biomass reaction has a flux of 323.36325286093853\n"
+      "The biomass reaction has a flux of 358.248919636977\n"
      ]
     }
    ],
@@ -291,7 +268,6 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -299,14 +275,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1) rxn29117: (1) Pyridoxal[e] <=> (1) Pyridoxal[c]\n",
-      "(2) rxn13681: (1) H+[e] + (1) Co2+[c] <=> (1) H+[c] + (1) Co2+[e]\n",
-      "(3) rxn01513: (1) ATP[c] + (1) H+[c] + (1) dTMP[c] <=> (1) ADP[c] + (1) dTDP[c]\n",
-      "(4) rxn05645: (1) H+[e] + (1) Riboflavin[e] <=> (1) H+[c] + (1) Riboflavin[c]\n",
-      "(5) rxn10571: (1) H2O[c] + (1) ATP[c] + (1) Mg[e] <=> (1) ADP[c] + (1) Phosphate[c] + (1) H+[c] + (1) Mg[c]\n",
-      "(6) rxn00119: (1) ATP[c] + (1) H+[c] + (1) UMP[c] <=> (1) ADP[c] + (1) UDP[c]\n",
-      "(7) rxn03164: (1) ATP[c] + (1) Ala-Ala[c] + (1) UDP-N-acetylmuramoyl-L-alanyl-D-gamma-glutamyl-meso-2-6-diaminopimelate[c] <=> (1) ADP[c] + (1) Phosphate[c] + (1) H+[c] + (1) UDP-N-acetylmuramoyl-L-alanyl-D-glutamyl-6-carboxy-L-lysyl-D-alanyl- D-alanine[c]\n",
-      "(8) rxn02285: (1) NADP[c] + (1) UDP-MurNAc[c] <=> (1) NADPH[c] + (1) H+[c] + (1) UDP-N-acetylglucosamine enolpyruvate[c]\n"
+      "(1) rxn02928: (1) NAD[c] + (1) tetrahydrodipicolinate[c] <=> (1) NADH[c] + (1) H+[c] + (1) Dihydrodipicolinate[c]\n",
+      "(2) rxn05310: (1) Niacin[e] <=> (1) Niacin[c]\n",
+      "(3) rxn02285: (1) NADP[c] + (1) UDP-MurNAc[c] <=> (1) NADPH[c] + (1) H+[c] + (1) UDP-N-acetylglucosamine enolpyruvate[c]\n",
+      "(4) rxn01644: (1) Pyruvate[c] + (1) L-Aspartate4-semialdehyde[c] <=> (2) H2O[c] + (1) H+[c] + (1) Dihydrodipicolinate[c]\n",
+      "(5) rxn03164: (1) ATP[c] + (1) Ala-Ala[c] + (1) UDP-N-acetylmuramoyl-L-alanyl-D-gamma-glutamyl-meso-2-6-diaminopimelate[c] <=> (1) ADP[c] + (1) Phosphate[c] + (1) H+[c] + (1) UDP-N-acetylmuramoyl-L-alanyl-D-glutamyl-6-carboxy-L-lysyl-D-alanyl- D-alanine[c]\n",
+      "(6) rxn05166: (1) H2O[c] + (1) ATP[c] + (1) Co2+[e] <=> (1) ADP[c] + (1) Phosphate[c] + (1) H+[c] + (1) Co2+[c]\n",
+      "(7) rxn10571: (1) H2O[c] + (1) ATP[c] + (1) Mg[e] <=> (1) ADP[c] + (1) Phosphate[c] + (1) H+[c] + (1) Mg[c]\n",
+      "(8) rxn05224: (1) Riboflavin[e] <=> (1) Riboflavin[c]\n",
+      "(9) rxn01513: (1) ATP[c] + (1) H+[c] + (1) dTMP[c] <=> (1) ADP[c] + (1) dTDP[c]\n",
+      "(10) rxn00851: (1) ATP[c] + (2) D-Alanine[c] <=> (1) ADP[c] + (1) Phosphate[c] + (1) H+[c] + (1) Ala-Ala[c]\n"
      ]
     }
    ],
@@ -317,10 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Save model\n",
     "The second step shows how to save the model to hard disk."
@@ -329,23 +304,16 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "model_directory = \"save_citrobacter_sedlakii\"\n",
+    "model_directory = \"saved_models\"\n",
     "PyFBA.model.save_model(model, model_directory)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Model has been stored. Here is a directory listing of the files that were created."
    ]
@@ -354,9 +322,6 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -364,12 +329,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Citrobacter sedlakii.compounds: 27883B\n",
-      "Citrobacter sedlakii.gfmedia: 14B\n",
-      "Citrobacter sedlakii.gfreactions: 72B\n",
-      "Citrobacter sedlakii.info: 114B\n",
-      "Citrobacter sedlakii.reactions: 13077B\n",
-      "Citrobacter sedlakii.roles: 70146B\n"
+      "Citrobacter_sedlakii.compounds: 35343B\n",
+      "Citrobacter_sedlakii.gfmedia: 14B\n",
+      "Citrobacter_sedlakii.gfreactions: 90B\n",
+      "Citrobacter_sedlakii.info: 114B\n",
+      "Citrobacter_sedlakii.reactions: 13752B\n",
+      "Citrobacter_sedlakii.roles: 70980B\n"
      ]
     }
    ],
@@ -378,6 +343,13 @@
     "    fp = os.path.join(model_directory, f)\n",
     "    print(f, \": \", os.path.getsize(fp), \"B\", sep=\"\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -396,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
